# rustus

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .rustfmt.toml  404.html  Cargo.toml  Cross.toml  Dockerfile  README.md  docker-compose.yaml  docker-compose.yml  index.html  index.yaml  mkdocs.yml  rust-toolchain.toml  rustus-0.1.0.tgz  sitemap.xml
.github/: dependabot.yml
.github/workflows/: docker.yml  docs.yml  lint.yml  release.yml  test.yml
configuration/: index.html
deploy/: Dockerfile  alpine.Dockerfile  index.html
deploy/helm/: Chart.yaml  values.yaml
deploy/helm/templates/: _helpers.tpl  deployment.yaml  ingress.yaml  serviceaccount.yaml  statefulset.yaml
docs/: configuration.md  deploy.md  hooks.md  index.md
helm/: values.yaml
helm/templates/: NOTES.txt  hpa.yaml  pvc.yml  service.yaml  servicemonitor.yaml
helm_releases/: index.yaml  rustus-0.1.0.tgz  rustus-0.2.0.tgz
hooks/: index.html
imgs/: rustus_startup_logo.txt
search/: search_index.json
src/: config.rs  errors.rs  extensions.rs  file_info.rs  main.rs  metrics.rs  routes.rs  server.rs  state.rs
src/data_storage/: base.rs  file_storage.rs  mod.rs  s3_hybrid.rs
src/data_storage/impls/: file_storage.rs  gcs_hybrid.rs  mod.rs  s3_hybrid.rs  s3_storage.rs
src/info_storage/: base.rs  mod.rs
src/info_storage/impls/: file_storage.rs  mod.rs  redis_storage.rs
src/info_storages/: base.rs  db_info_storage.rs  db_model.rs  file_info.rs  file_info_storage.rs  mod.rs  redis_info_storage.rs
src/info_storages/impls/: file_info_storage.rs  mod.rs  redis_info_storage.rs
src/info_storages/models/: available_info_storages.rs  file_info.rs  info_store.rs  mod.rs
src/models/: file_info.rs  mod.rs
src/notifiers/: amqp_notifier.rs  base.rs  dir_notifier.rs  file_notifier.rs  hooks.rs  http_notifier.rs  manager.rs  message_format.rs  mod.rs  notifier.rs  serializer.rs
src/notifiers/impls/: amqp_notifier.rs  dir_notifier.rs  file_notifier.rs  http_notifier.rs  kafka_notifier.rs  mod.rs  nats_notifier.rs
src/notifiers/models/: hooks.rs  message.rs  message_format.rs  mod.rs  notification_manager.rs  notifier.rs
src/protocol/: extensions.rs  mod.rs
src/protocol/core/: get_info.rs  mod.rs  routes.rs  server_info.rs  write_bytes.rs
src/protocol/creation/: mod.rs  routes.rs
src/protocol/creation_with_upload/: mod.rs  routes.rs
src/protocol/getting/: mod.rs  routes.rs
src/protocol/termination/: mod.rs  routes.rs
src/server/: cors.rs  mod.rs
src/server/routes/: create.rs  delete.rs  file_info.rs  get_file.rs  info.rs  mod.rs  upload.rs
src/storages/: file_storage.rs  mod.rs  s3_hybrid_storage.rs  sqlite_file_storage.rs
src/storages/models/: available_stores.rs  mod.rs  storage.rs
src/utils/: dir_struct.rs  enums.rs  hashes.rs  headers.rs  lapin_pool.rs  mod.rs  result.rs
