[package]
name = "rustus"
version = "0.7.6"
edition = "2021"
description = "TUS protocol implementation written in Rust."
license-file = "LICENSE"
authors = ["Pavel Kirilin <win10@list.ru>"]
homepage = "https://github.com/s3rius/rustus"
readme = "README.md"

[[bin]]
name = "rustus"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.74"
axum = { version = "0.7.5" }
base64 = "0.22.1"
bytes = "1.6.0"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.3.21", features = ["env", "derive"] }
enum_dispatch = "0.3.13"
fern = { version = "0.6.2", features = ["colored", "chrono"] }
futures = "0.3.30"
log = "0.4.21"
mime = "0.3.17"
mime_guess = "2.0.4"
mobc = "0.8.4"
redis = { version = "0.25.3", features = ["tokio-comp", "connection-manager"] }
rustc-hash = "2.0.0"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
strum = { version = "0.26.2", features = ["derive"] }
thiserror = "1.0.60"
tokio = { version = "1.37.0", features = ["full", "bytes"] }
tokio-util = { version = "0.7.11", features = ["io"] }
uuid = { version = "1.8.0", features = ["v4"] }
rust-s3 = "0.34.0"
tower = "0.4.13"
# Hashsums
sha1 = { version = "^0.10.1", features = ["compress"] }
sha2 = { version = "^0.10.1", features = ["compress"] }
md-5 = "^0.10.1"
digest = "^0.10.1"
reqwest = "0.12.4"
lapin = "2.3.4"
tower-http = { version = "0.5.2", features = ["cors", "trace"] }
wildmatch = "2.3.3"
tracing = "0.1.40"
sentry = "0.34.0"
sentry-tracing = "0.34.0"
sentry-tower = { version = "0.34.0", features = [
    "http",
    "axum",
    "axum-matched-path",
] }
tracing-subscriber = { version = "0.3.18", features = [
    "smallvec",
    "parking_lot",
    "time",
] }
tracing-error = { version = "0.2.0", features = ["traced-error"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.5.4", features = [
    "background_threads_runtime_support",
] }

[profile.release]
opt-level = 3
debug = false
codegen-units = 1
lto = true
panic = "abort"
