[package]
name = "rustus"
version = "0.7.6"
edition = "2021"
description = "TUS protocol implementation written in Rust."
keywords = ["tus", "server", "actix-web"]
license-file = "LICENSE"
authors = ["Pavel Kirilin <win10@list.ru>"]
homepage = "https://github.com/s3rius/rustus"
readme = "README.md"

[[bin]]
name = "rustus"

[dependencies]
bytes = "^1.9.0"
bb8 = "^0.8.6"
async-trait = "^0.1.83"
base64 = "^0.22.1"
log = "^0.4.22"
serde_json = "^1"
thiserror = "^2.0"
url = "^2.5.4"
prometheus = "^0.13.4"
actix-web-prom = "^0.9.0"
dyn-clone = "^1.0.17"
actix-cors = "0.7.0"
wildmatch = "2.4.0"
md-5 = "^0.10.6"
digest = "0.10.7"
mimalloc = { version = "~0.1.43", default-features = false }
clap = { version = "4.5.21", features = ["derive", "env"] }
dotenvy = { version = "0.15.7", features = ["clap"] }
sentry = "0.35.0"
sentry-actix = "0.35.0"
mime = "0.3.17"
mime_guess = "2.0.5"
mobc = "0.8.5"

[dependencies.sha1]
version = "^0.10.6"
features = ["compress"]

[dependencies.sha2]
version = "^0.10.8"
features = ["compress"]

[dependencies.futures]
version = "^0.3.31"

[dependencies.serde]
version = "^1"
features = ["derive"]

[dependencies.openssl]
version = "^0.10.68"
features = ["vendored"]

[dependencies.actix-files]
version = "^0.6.6"

[dependencies.actix-web]
version = "^4.9.0"

[dependencies.chrono]
features = ["serde"]
version = "^0.4.38"

[dependencies.derive_more]
default-features = false
features = ["display", "from", "from_str"]
version = "^1.0.0"

[dependencies.fern]
features = ["colored"]
version = "^0.7.0"

[dependencies.lapin]
optional = true
version = "^2.5.0"

[dependencies.bb8-lapin]
version = "^0.5.0"
optional = true

[dependencies.bb8-redis]
optional = true
version = "^0.17.0"

[dependencies.redis]
optional = true
version = "^0.27.5"

[dependencies.rbatis]
default-features = false
optional = true
version = "^4.5"

[dependencies.rbson]
optional = true
version = "^2.0"

[dependencies.reqwest]
features = ["json"]
version = "^0.12.9"

[dependencies.strum]
features = ["derive"]
version = "0.26.3"

[dependencies.tokio]
features = [
    "time",
    "process",
    "fs",
    "io-std",
    "io-util",
    "rt-multi-thread",
    "bytes",
    "rt",
    "macros",
]
version = "^1.41.1"

[dependencies.uuid]
features = ["v4"]
version = "^1.11.0"

[dependencies.rust-s3]
version = "~0.35.1"

[features]
all = ["redis_info_storage", "db_info_storage", "amqp_notifier"]
amqp_notifier = ["lapin", "bb8-lapin"]
db_info_storage = ["rbatis", "rbson"]
default = []
redis_info_storage = ["bb8-redis", "redis"]

### For testing
test_redis = []
test_db = []
test_rmq = []
integration_tests = ["test_redis", "test_db", "test_rmq"]

[dev-dependencies]
tempdir = "0.3.7"
actix-rt = "2.10.0"
httptest = "0.16.1"
actix-http = "3.9.0"

[profile]
[profile.release]
debug = false
lto = "fat"
panic = "abort"
opt-level = 3
codegen-units = 1
