[package]
name = "rustus"
version = "0.7.6"
edition = "2021"
description = "TUS protocol implementation written in Rust."
keywords = ["tus", "server", "actix-web"]
license-file = "LICENSE"
authors = ["Pavel Kirilin <win10@list.ru>"]
homepage = "https://github.com/s3rius/rustus"
readme = "README.md"

[[bin]]
name = "rustus"

[dependencies]
actix-web = "^4.9.0"
actix-files = "^0.6.6"
bytes = "^1.9.0"
bb8 = "^0.8.6"
async-trait = "^0.1.83"
base64 = "^0.22.1"
log = "^0.4.22"
serde_json = "^1"
thiserror = "^2.0"
url = "^2.5.4"
prometheus = "^0.13.4"
actix-web-prom = "^0.9.0"
dyn-clone = "^1.0.17"
actix-cors = "0.7.0"
wildmatch = "2.4.0"
md-5 = "^0.10.6"
digest = "0.10.7"
sentry = "0.35.0"
sentry-actix = "0.35.0"
mime = "0.3.17"
mime_guess = "2.0.5"
mobc = "0.8.5"
rust-s3 = "~0.35.1"
futures = "^0.3.31"
lapin = "^2.5.0"
serde = { version = "^1", features = ["derive"] }
clap = { version = "4.5.21", features = ["derive", "env"] }
mimalloc = { version = "~0.1.43", default-features = false }
dotenvy = { version = "0.15.7", features = ["clap"] }
redis = { version  = "^0.27.5", features = ["tokio", "tokio-comp"]}
tokio = { version = "^1.41.1", features = ["full"] }
uuid = { version = "^1.11.0", features = ["v4"] }
strum = { version = "0.26.3", features = ["derive"] }
sha1 = { version = "^0.10.6", features = ["compress"] }
sha2 = { version = "^0.10.8", features = ["compress"] }
openssl = { version = "^0.10.68", features = ["vendored"] }
chrono = { version = "^0.4.38", features = ["serde"] }
fern = { version = "^0.7.0", features = ["colored"] }
reqwest = { version = "^0.12.9", features = ["json"] }
derive_more = { version = "^1.0.0", features = ["display", "from", "from_str"], default-features = false }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"

[features]
### For testing
test_redis = []
test_rmq = []
integration_tests = ["test_redis", "test_rmq"]

[dev-dependencies]
tempdir = "0.3.7"
actix-rt = "2.10.0"
httptest = "0.16.1"
actix-http = "3.9.0"

[profile]
[profile.release]
debug = false
lto = "fat"
panic = "abort"
opt-level = 3
codegen-units = 1
